[vr] Permit nested visibility animations to start simultaneously

Like bindings, we now recur updating anims if we are or will be seen.

Also removes flag to disable truncated treewalks.

Bug: 842644
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I26ac8a140c86b3ef223d00677a710709ca207cea
Reviewed-on: https://chromium-review.googlesource.com/1057347
Commit-Queue: Ian Vollick <vollick@chromium.org>
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558346}
Former-commit-id: e2f2e6458eb9c816f07b12a632ef81e8d3bb44a0